# azure-cosmosdb-as-kvstore

./: Cargo.toml  README.md  azure.toml  spin.toml
src/: lib.rs
